<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.ntut.user.myhw3.MainActivity">

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radGrpSex"
        android:layout_width="match_parent"
        android:layout_height="91dp">

    <RadioButton
        android:id="@+id/radioButton_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="male" />

    <RadioButton
        android:id="@+id/radioButton_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="female" />

    </RadioGroup>
    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/male_list" />


    <CheckBox
        android:id="@+id/che_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_singing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_dancing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dance"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reading"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_writing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/writing"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_climbing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/climbing"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_swimming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swim"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eating"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che_painting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawing"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textHob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="興趣"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="18sp" />

</LinearLayout>
